--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,9 @@
 	ul {
 		list-style: disc;
 		margin: 0 0 2.25em 0;
-		padding-left: 1em;
+		padding-left: 3em;
+        margin-top: -25px;
+        
 	}
 
 		ul li {
@@ -914,7 +916,7 @@
 
 	#header {
 		background: #1B3E9A;
-		color: #d1f1e9;
+		color: #deebe8;
 		height: 100%;
 		position: fixed;
 		text-align: center;
@@ -987,7 +989,7 @@
 		}
 
 			#header > nav ul li {
-				border-top: solid 2px #5ccfb0;
+				border-top: solid 2px #173987;
 				display: block;
 				padding: 0;
 			}
@@ -1038,7 +1040,7 @@
 /* One */
 
 	#one:before {
-		background-image: url("../images/banner.jpg");
+		background-image: url("../images/banner.png");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
