--- a/css/style.css
+++ b/css/style.css
@@ -1040,7 +1040,7 @@
 /* One */
 
 	#one:before {
-		background-image: url("../images/banner.png");
+		background-image: url("https://dl.dropboxusercontent.com/s/kwlcpnlj4haawwm/banner.png");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover;
